      popup menu which you can use to clear the line or the window.
    - Ever suffered from a frozen display while debugging a modal
      application?  If the debugged program is interrupted in some modal
      state, DDD will automatically make it ungrab the pointer.
    - In the source argument field `()', pressing RETURN activates
      the `Lookup ()' button.
    - Unnecessary redisplays have been significantly reduced, causing
      much less flickering.
    - You can search for keywords in the online DDD manual.

    Documentation:
    - The PostScript copy of the manual has been enriched with more
      than 30 color screen shots showing DDD usage.

    Changes in configuration and building:
    - DDD 2.1 uses improved configuration checks from Autoconf 2.12.
    - DDD no longer installs in the `gcc' location by default, but in
      an existing DDD location; otherwise, in `/usr/local/bin'.
    - Improved means of determining builder's e-mail address.
    - Beta releases and DDD snapshots expire after a few weeks.

    Bug fixes:
    - Using DBX, comments were stripped from source code under certain
      circumstances.  Fixed.
    - The sash to resize the assembler window is back again.
    - With XDB, sources are found in alternate directories, too.
    - With DBX, the current source line was omitted from the listing
      under certain circumstances.  Fixed.
    - `Help on Version' no longer includes the entire DDD configuration.
    - Several single-letter options like `-d DIR' are now passed down to the
      inferior debugger.
    - Buttons ending in `...' insert their name, followed by a space.
    - Line continuations (i.e. lines ending in `\') are properly handled.
    - The `vsl' and `test-graph' programs can again be built.
    - And, again, dozens of minor bug fixes and improvements.

    Release policy:
    - Due to the large amount of testing, we make new DDD releases
      only every six months or so.  If you found a bug and fixed it